[tool.poetry]
name = "aiohttp_asgi"
version = "0.5.2"
description = "Adapter to running ASGI applications on aiohttp"
authors = ["Dmitry Orlov <me@mosquito.su>"]
readme = "README.md"
license = "Apache-2.0"
homepage = "https://github.com/mosquito/aiohttp-asgi"
keywords=["aiohttp", "asgi"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: Apache Software License",
    "Topic :: Internet",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: MacOS",
    "Operating System :: POSIX",
    "Operating System :: Microsoft",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Programming Language :: Python :: Implementation :: CPython",
]
packages = [
    { include = "aiohttp_asgi" }
]

[tool.poetry.urls]
"Source" = "https://github.com/mosquito/aiohttp-asgi"
"Tracker" = "https://github.com/mosquito/aiohttp-asgi/issues"
"Documentation" = "https://github.com/mosquito/aiohttp-asgi/blob/master/README.md"

[tool.poetry.dependencies]
python = "^3.7"
aiohttp = "^3"
typing_extensions = [{ version = '*', python = "< 3.8" }]

[tool.poetry.group.dev.dependencies]
mypy = "^0.991"
pre-commit = "^2.20.0"
pytest = "^7.2.0"
types-croniter = "^1.3"
types-setuptools = "^65.6.0.1"
pylama = "^8.4.1"
coveralls = "^3.3.1"
fastapi = "^0.88.0"
pylava = "^0.3.0"
pytest-aiohttp = "^1.0.4"
pytest-cov = "^4.0.0"

[tool.poetry.scripts]
aiohttp-asgi = 'aiohttp_asgi.__main__:main'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
check_untyped_defs = true
disallow_any_generics = false
disallow_incomplete_defs = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
follow_imports = "silent"
no_implicit_reexport = true
strict_optional = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = false
disable_error_code = "override"
files = [
    "aiohttp_asgi",
    "tests",
]


[[tool.mypy.overrides]]
module = ["tests.*"]
check_untyped_defs = true
disallow_incomplete_defs = false
disallow_untyped_calls = false
disallow_untyped_decorators = false
disallow_untyped_defs = false
disable_error_code = "no-untyped-def"

[tool.pylama]
linters = "mccabe,pycodestyle,pyflakes"
skip = "*env*,.tox*,*build*,.*,env/*,.venv/*"
ignore = "C901"

[tool.pylama.linter.pycodestyle]
max_line_length = 80
show-pep8 = true
show-source = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
